# oxup

./: .gitignore  Cargo.toml  README.md  install.sh
.github/workflows/: publish.yml
src/: init.rs  install.rs  list.rs  main.rs  os.rs  set.rs  setup.rs  uninstall.rs  unset.rs  update.rs
src/installers/: linux.rs  macos.rs  mod.rs  windows.rs
src/setup/: linux.rs  macos.rs  windows.rs
src/uninstallers/: linux.rs  macos.rs  windows.rs
