[package]
name = "oxup"
version = "2.2.3"
edition = "2021"

[profile.release]
strip = true
lto = true
opt-level = "z"

[target.'cfg(target_os = "macos")'.dependencies]
zip = { version = "0.6.2", features = ["deflate"], default-features = false }
flate2 = "1.0.24"

[target.'cfg(windows)'.dependencies]
zip = { version = "0.6.2", features = ["deflate"], default-features = false }
flate2 = "1.0.24"

[target.'cfg(target_os = "linux")'.dependencies]
tar = "0.4.38"
flate2 = "1.0.24"

[dependencies]
clap = { version = "4.0.9", features = ["derive"] }
reqwest = { version = "0.10", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "0.2", features = ["macros"] }
