[package]
name = "oxup"
version = "2.6.2"
edition = "2021"

[profile.release]
strip = true
lto = true
opt-level = "z"

[dependencies]
clap = { version = "4.0.9", features = ["derive"] }
reqwest = { version = "0.10", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "0.2", features = ["macros"] }
